--- a/mautic/templates/pvc.yaml
+++ b/mautic/templates/pvc.yaml
@@ -10,5 +10,7 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistence.size | quote }}
-  {{ include "mautic.storageClass" . }}
+  {{- if .Values.persistence.storageClass }}
+  storageClassName: {{ .Values.persistence.storageClass }}
+  {{- end }}
 {{- end }}
