--- a/mautic/values.yaml
+++ b/mautic/values.yaml
@@ -12,13 +12,17 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+
+runCronJobs: "true"
+trustedProxies: "0.0.0.0/0"
+
 service:
   type: ClusterIP
   port: 80
 
 ingress:
   enabled: false
-  host: 'mautic-example.local'
+  host: 'mautic.local'
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
@@ -28,8 +32,6 @@ database:
   name: "mautic"
   user: "root"
   password: "secret"
-  runCronJobs: "true"
-  trustedProxies: "0.0.0.0/0"
 
 ## Enable persistence using Persistent Volume Claims
 ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
