--- a/mautic/templates/deployment.yaml
+++ b/mautic/templates/deployment.yaml
@@ -37,6 +37,8 @@ spec:
               value: {{ .Values.database.password | quote }}
             - name: MAUTIC_RUN_CRON_JOBS
               value: {{ .Values.runCronJobs | quote }}
+            - name: MAUTIC_TRUSTED_PROXIES
+              value: {{ .Values.trustedProxies | quote }}
           ports:
             - name: http
               containerPort: 80
@@ -52,12 +54,15 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-            
+            {{- toYaml .Values.securityContext | nindent 12 }}           
       volumes:
         - name: mautic-data
+          {{- if .Values.persistence.enabled }}
           persistentVolumeClaim:
-            claimName: {{ include "mautic.fullname" . }}
+            claimName: {{ .Values.persistence.existingClaim | default (include "mautic.fullname" .) }}
+          {{- else }}
+          emptyDir: {}
+          {{ end }}
 
       {{- with .Values.nodeSelector }}
       nodeSelector:
