--- a/dind/values.yaml
+++ b/dind/values.yaml
@@ -75,3 +75,8 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+jobs:
+  prune:
+    schedule: "15 1 * * *"
+    command: ["docker", "image", "prune", "--force"]
