--- a/mautic/templates/ingress.yaml
+++ b/mautic/templates/ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.ingress.enabled -}}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "mautic.fullname" . }}
@@ -20,6 +20,8 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: {{ include "mautic.fullname" . }}
-              servicePort: 80
+              service:
+                name: {{ include "mautic.fullname" . }}
+                port:
+                  number: {{ .Values.service.port }}
 {{- end }}
