Add pathType to mautic ingress path

--- a/mautic/templates/ingress.yaml
+++ b/mautic/templates/ingress.yaml
@@ -24,4 +24,5 @@ spec:
                 name: {{ include "mautic.fullname" . }}
                 port:
                   number: {{ .Values.service.port }}
+            pathType: Prefix
 {{- end }}
